test/fixtures/errors/jade/invalid.jade

//- keep on line 3
if (youAreUsingJade youAreUsingJade
